# SUSTech-CS205-C-Cpp-Program-Design-Projects

./: README.md
Project1 A simple calculator/: calc.h  calculator.c  utils.c
Project2 Dot product/: DotProduct.java  main.c
Project3 A function for convolutional layer/: CMakeLists.txt  conv.c  conv.h  main.c
Project4 A class for data blobs in CNN/: CMakeLists.txt  dataBlob2.cpp  dataBlob2.h  main.cpp
Project5 General Matrix Multiplication/: CMakeLists.txt  main.c  myGEMM.c  myGEMM.h
